# yallmp

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.py  fake_llm_entrypoint.py  pyproject.toml  requirements.txt
app/core/: app.py  config.py  log_decorators.py  logging_config.py  otel.py  proxy.py  security.py
app/middlewares/: billing_middleware.py  logging_middleware.py  metrics_middleware.py
app/mock/: fake_llm.py  fake_llm_server.py
app/schemas/: feedback.py  health.py  prompt.py  provider.py  proxy.py  search.py
app/services/: authenticated_llm.py  billing.py  billing_sync.py  chain_manager.py  dashboard.py  dashboard_prometheus.py  fake_openai.py  langfuse_tracing.py  llm_authentication.py  llm_hub.py  metrics_callback_handler.py  pricing.py  prompt_manager.py  search_hub.py  token_manager.py  tracing.py
app/templates/: dashboard.html  search.html
data/billing/: limits.yaml
data/chain_hub/: sample.json
data/dashboard/: dashboard.json
data/langchain/: default.json  pricing.json
data/llm_hub/: aliases.json  customhf.json  gigahf.json  localllm.json  openrouter.json  vsellm.json
data/prompt_hub/: sample.json  sample2.json
data/search_hub/: brave.json  exa.json  tavily.json
devops/: .dockerignore  Dockerfile
devops/alerting/: alert_rules.yml  alertmanager.yml  prometheus.yml  slo_rules.yml
docs/: gaps.md  litellm_comparison.md
grafana/: yallmp-dashboard.json
tests/: conftest.py  test_app.py  test_billing.py  test_billing_middleware.py  test_billing_sync.py  test_chain_manager.py  test_circuit_breaker.py  test_config.py  test_dashboard.py  test_extract_content.py  test_feedback.py  test_langfuse_tracing.py  test_llm_authentication.py  test_llm_hub.py  test_logging_middleware.py  test_metrics_callback.py  test_metrics_middleware.py  test_pricing.py  test_prompt_manager.py  test_provider_schema.py  test_proxy.py  test_proxy_functions.py  test_proxy_multi_provider.py  test_search_adapters.py  test_search_hub.py  test_security.py  test_token_manager.py  test_tracing.py
tests/load/: artillery-local.yaml  artillery.yaml  attack.sh  generate_test_files.sh  package.json
(+5 files in other folders)
