[project]
name = "yallmp"
version = "0.1.0"
description = "Yet another LLM proxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.11",
    "gigachat>=0.1.39",
    "httpx>=0.28.1",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "prometheus-client>=0.21.1",
    "pydantic-settings>=2.8.1",
    "starlette>=0.46.1",
    "structlog>=25.2.0",
    "uvicorn>=0.34.0",
    "aiofiles",
    "langfuse>=2.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
 "pre-commit>=4.1.0",
 "ruff>=0.9.10",
 "pytest>=8.0",
 "pytest-asyncio>=0.25",
 "httpx>=0.28",
 "pytest-cov>=7.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
follow_imports = 'skip'
files = '*.py'
disallow_untyped_defs = false
implicit_optional = true
strict_optional = false
warn_no_return = false
allow_untyped_globals = true
local_partial_types = true
disable_error_code = [
    "arg-type",
    "var-annotated",
    "misc",
    "has-type",
    "no-redef",
    "attr-defined",
    "call-arg",
    "assignment",
    "override",
    "import",
    "call-overload",
    "return-value",
    "dict-item"
]
